# LLM-Scheduler

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: admin.py  auth.py  catalog.py  db.py  dependencies.py  lifecycle_logger.py  main.py  models.py  planner.py  ports.py  proxy.py  public_api.py  router_core.py  schemas.py  settings.py  slurm.py  utils.py
app/ui/: app.js  index.html  login.html  style.css
config/: example.env  models.example.yaml  models.yaml
deploy/nginx/: vllm-router.conf
deploy/systemd/: vllm-router.service
templates/: vllm_job.sh
