[project]
name = "katherlab-llm-scheduler"
version = "0.1.0"
description = "KatherLab LLM Scheduler — a web-based GPU scheduling and model serving tool for shared HPC nodes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.129.0",
    "uvicorn[standard]==0.40.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.0",
    "PyYAML==6.0.3",
    "SQLAlchemy==2.0.46",
    "python-multipart"
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]